<package>
  <name>drone_description</name>
  <version>0.3.5</version>
    <description>The drone_description package</description>

  <maintainer email="salman@todo.todo">salman</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hector_sensors_description</run_depend>

</package>
